# static/api.yaml
@@ -398,6 +398,22 @@ paths:
           $ref: '#/components/responses/AdminError'
         '500':
           $ref: '#/components/responses/InternalError'
+  /users/self/token:
+    get:
+      summary: Validate a token
+      operationId: validateToken
+      tags:
+        - users
+      security:
+        - jwt: []
+        - jwt_admin: []
+      responses:
+        '204':
+          description: Token is valid
+        '401':
+          $ref: '#/components/responses/AuthError'
+        '500':
+          $ref: '#/components/responses/InternalError'
   /users/{username}/token:
     post:
       summary: Issue a token
